INFRAOP-5732: fix typos, syntax

--- a/hadoop/conf/ranger/admin.install.properties
+++ b/hadoop/conf/ranger/admin.install.properties
@@ -88,6 +88,9 @@ audit_store=solr
 {%- set solr_grains = salt['mine.get'](solr_target, 'grains.item', expr_form='compound') -%}
 {% if solr_grains.keys()|length > 0 %}
 audit_solr_urls={%- for minion in solr_grains.keys() -%}http://{{ solr_grains[minion]['fqdn'] }}:8983/solr/ranger_audits{{ "," if not loop.last }}{%- endfor %}
+{%- else %}
+audit_solr_urls=
+{% endif %}
 audit_solr_user=
 audit_solr_password=
 audit_solr_zookeepers={{ zk.connection_string }}
