INFRAOP-5732: fix jinja expr

--- a/hadoop/conf/ranger/admin.install.properties
+++ b/hadoop/conf/ranger/admin.install.properties
@@ -87,7 +87,7 @@ audit_store=solr
 {%- set solr_target = 'G@role:solr and G@clustername:' + grains['cluster_id'] -%}
 {%- set solr_grains = salt['mine.get'](solr_target, 'grains.item', expr_form='compound') -%}
 {% if solr_grains.keys()|length > 0 %}
-audit_solr_urls={%- for minion in solr_grains.keys() -%}http://{{ solr_grains[minion]['fqdn'] }}:8983/solr/ranger_audits{{ "," if not loop.last }}{%- endfor %}
+audit_solr_urls={%- for minion in solr_grains.keys() -%}http://{{ solr_grains[minion]['fqdn'] }}:8983/solr/ranger_audits{{ "," if not loop.last else "" }}{%- endfor %}
 {%- else %}
 audit_solr_urls=
 {% endif %}
