INFRAOP-5732: config and init scripts for ranger

--- a/hadoop/conf/ranger/admin.install.properties
+++ b/hadoop/conf/ranger/admin.install.properties
@@ -174,23 +174,26 @@ xa_ldap_referral=
 xa_ldap_userSearchFilter=
 ####ACTIVE_DIRECTORY settings - Required only if have selected AD authentication ####
 #
-# Sample Settings
-#
-#xa_ldap_ad_domain=xasecure.net
-#xa_ldap_ad_url=ldap://127.0.0.1:389
-#xa_ldap_ad_base_dn=dc=xasecure,dc=net
-#xa_ldap_ad_bind_dn=cn=administrator,ou=users,dc=xasecure,dc=net
-#xa_ldap_ad_bind_password=
-#xa_ldap_ad_referral=follow|ignore
-#xa_ldap_ad_userSearchFilter=(sAMAccountName={0})
 
-xa_ldap_ad_domain=
-xa_ldap_ad_url=
-xa_ldap_ad_base_dn=
-xa_ldap_ad_bind_dn=
-xa_ldap_ad_bind_password=
-xa_ldap_ad_referral=
-xa_ldap_ad_userSearchFilter=
+{%- if ranger.ui_useraccess %}
+xa_ldap_ad_domain={{ ranger.ldap_ad_domain }}
+xa_ldap_ad_url=ldaps://hh2dc01.ads.mobilcom.de:3269
+xa_ldap_ad_url=ldaps://{{ ranger.ldap_host }}:{{ ranger.ldap_port }}
+xa_ldap_ad_base_dn={{ ranger.ldap_searchbase }}
+xa_ldap_ad_bind_dn={{ ranger.ldap_user }}
+xa_ldap_ad_bind_password={{ ranger.ldap_pass }}
+xa_ldap_ad_referral=follow
+xa_ldap_ad_userSearchFilter={{ ranger.ldap_ad_usersearchfilter }}
+{%- else %}
+#xa_ldap_ad_domain={{ ranger.ldap_ad_domain }}
+#xa_ldap_ad_url=ldaps://hh2dc01.ads.mobilcom.de:3269
+#xa_ldap_ad_url=ldaps://{{ ranger.ldap_host }}:{{ ranger.ldap_port }}
+#xa_ldap_ad_base_dn={{ ranger.ldap_searchbase }}
+#xa_ldap_ad_bind_dn={{ ranger.ldap_user }}
+#xa_ldap_ad_bind_password={{ ranger.ldap_pass }}
+#xa_ldap_ad_referral=follow
+#xa_ldap_ad_userSearchFilter={{ ranger.ldap_ad_usersearchfilter }}
+{%- endif %}
 
 #------------ Kerberos Config -----------------
 spnego_principal=
