--- a/hadoop/conf/ranger/usersync.install.properties
+++ b/hadoop/conf/ranger/usersync.install.properties
@@ -133,7 +133,8 @@ SYNC_LDAP_USER_OBJECT_CLASS = person
 # a sample value would be (dept=eng)
 # please customize the value to suit your deployment
 # default value is empty
-SYNC_LDAP_USER_SEARCH_FILTER =
+SYNC_LDAP_USER_SEARCH_FILTER = {{ ranger.ldap_scrap_userfilter }}
+
 
 # attribute from user entry that would be treated as user name
 # please customize the value to suit your deployment
