--- a/hadoop/conf/hdfs/ranger.install.properties
+++ b/hadoop/conf/hdfs/ranger.install.properties
@@ -121,7 +121,7 @@ XAAUDIT.HDFS.LOCAL_ARCHIVE_MAX_FILE_COUNT=10
 XAAUDIT.SOLR.IS_ENABLED=true
 XAAUDIT.SOLR.MAX_QUEUE_SIZE=1
 XAAUDIT.SOLR.MAX_FLUSH_INTERVAL_MS=1000
-XAAUDIT.SOLR.SOLR.URL=http://{{ solr_fqdn }}:8983/solr/ranger_audits
+XAAUDIT.SOLR.SOLR_URL=http://{{ solr_fqdn }}:8983/solr/ranger_audits
 
 
 #
