INFRAOP-5732: ranger config for hadoop secure mode

--- a/hadoop/conf/ranger/admin.install.properties
+++ b/hadoop/conf/ranger/admin.install.properties
@@ -1,3 +1,4 @@
+{%- from 'hadoop/settings.sls'        import hadoop with context -%}
 {%- from 'hadoop/ranger/settings.sls' import ranger with context -%}
 {%- from 'hadoop/solr/settings.sls'   import solr with context -%}
 {%- from 'zookeeper/settings.sls'     import zk   with context -%}
@@ -196,6 +197,18 @@ xa_ldap_ad_userSearchFilter={{ ranger.ldap_ad_usersearchfilter }}
 {%- endif %}
 
 #------------ Kerberos Config -----------------
+{%- if hadoop.secure_mode %}
+spnego_principal=HTTP/{{ grains['fqdn'] }}@{{ grains['cluster_id'] | upper %}
+spnego_keytab=/etc/krb5/ranger.keytab
+token_valid=30
+cookie_domain={{ grains['fqdn'] }}
+cookie_path=/
+admin_principal=rangeradmin/{{ grains['fqdn'] }}@{{ grains['cluster_id'] | upper %}
+admin_keytab=/etc/krb5/ranger.keytab
+lookup_principal=rangerlookup/{{ grains['fqdn'] }}@{{ grains['cluster_id'] | upper %}
+lookup_keytab=/etc/krb5/ranger.keytab
+hadoop_conf=/etc/hadoop/conf
+{%- else %}
 spnego_principal=
 spnego_keytab=
 token_valid=30
@@ -206,6 +219,7 @@ admin_keytab=
 lookup_principal=
 lookup_keytab=
 hadoop_conf=/etc/hadoop/conf
+{%- endif %}
 #
 #-------- SSO CONFIG - Start ------------------
 #
