INFRAOP-5732: fix ranger config

--- a/hadoop/conf/ranger/admin.install.properties
+++ b/hadoop/conf/ranger/admin.install.properties
@@ -198,14 +198,14 @@ xa_ldap_ad_userSearchFilter={{ ranger.ldap_ad_usersearchfilter }}
 
 #------------ Kerberos Config -----------------
 {%- if hadoop.secure_mode %}
-spnego_principal=HTTP/{{ grains['fqdn'] }}@{{ grains['cluster_id'] | upper %}
+spnego_principal=HTTP/{{ grains['fqdn'] }}@{{ grains['cluster_id'] | upper }}
 spnego_keytab=/etc/krb5/ranger.keytab
 token_valid=30
 cookie_domain={{ grains['fqdn'] }}
 cookie_path=/
-admin_principal=rangeradmin/{{ grains['fqdn'] }}@{{ grains['cluster_id'] | upper %}
+admin_principal=rangeradmin/{{ grains['fqdn'] }}@{{ grains['cluster_id'] | upper }}
 admin_keytab=/etc/krb5/ranger.keytab
-lookup_principal=rangerlookup/{{ grains['fqdn'] }}@{{ grains['cluster_id'] | upper %}
+lookup_principal=rangerlookup/{{ grains['fqdn'] }}@{{ grains['cluster_id'] | upper }}
 lookup_keytab=/etc/krb5/ranger.keytab
 hadoop_conf=/etc/hadoop/conf
 {%- else %}
