INFRAOP-5732: yarn ranger plugin conf

--- a/hadoop/conf/hdfs/ranger.install.properties
+++ b/hadoop/conf/hdfs/ranger.install.properties
@@ -35,7 +35,7 @@ POLICY_MGR_URL=http://{{ ranger_fqdn }}:6080
 # Example:
 # REPOSITORY_NAME=hadoopdev
 #
-REPOSITORY_NAME={{ grains['cluster_id'] }}
+REPOSITORY_NAME=hdfs-{{ grains['cluster_id'] }}
 
 #
 # Set hadoop home when hadoop program and Ranger HDFS Plugin are not in the
