--- a/hadoop/conf/yarn/ranger.install.properties
+++ b/hadoop/conf/yarn/ranger.install.properties
@@ -35,7 +35,7 @@ POLICY_MGR_URL=http://{{ ranger_fqdn }}:6080
 # Example:
 # REPOSITORY_NAME=yarndev
 #
-REPOSITORY_NAME={{ grains['cluster_id'] }}
+REPOSITORY_NAME=yarn-{{ grains['cluster_id'] }}
 
 #
 # Name of the directory where the component's lib and conf directory exist.
