INFRAOP-5732: deploy knox ranger plugin

--- a/hadoop/conf/knox/ranger.install.properties
+++ b/hadoop/conf/knox/ranger.install.properties
@@ -1,6 +1,7 @@
 {%- from 'hadoop/ranger/settings.sls' import ranger with context -%}
-{%- from 'hadoop/settings.sls' import hadoop with context -%}
-{%- from 'zookeeper/settings.sls' import zk with context -%}
+{%- from 'hadoop/knox/settings.sls'   import knox with context -%}
+{%- from 'hadoop/settings.sls'        import hadoop with context -%}
+{%- from 'zookeeper/settings.sls'     import zk with context -%}
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
 # this work for additional information regarding copyright ownership.
@@ -36,6 +37,8 @@ POLICY_MGR_URL=http://{{ ranger_fqdn }}:6080
 # REPOSITORY_NAME=knoxdev
 #
 REPOSITORY_NAME=knox-{{ grains['cluster_id'] }}
+
+KNOX_HOME={{ knox.install_dir }}
 
 # AUDIT configuration with V3 properties
 
