INFRAOP-5732: ssl for ranger

--- a/hadoop/conf/ranger/admin.install.properties
+++ b/hadoop/conf/ranger/admin.install.properties
@@ -102,11 +102,20 @@ audit_solr_zookeepers={{ zk.connection_string }}
 # ------- PolicyManager CONFIG ----------------
 #
 
+{%- if  hadoop.secure_mode %}
+policymgr_external_url=https://{{ salt['grains.get']('fqdn') }}:6080
+policymgr_http_enabled=false
+policymgr_https_keystore_file=/home/ranger/.keystore
+policymgr_https_keystore_keyalias={{ grains['fqdn'] }}
+policymgr_https_keystore_password={{ hadoop.keystore_pass }}
+{% else %}
 policymgr_external_url=http://{{ salt['grains.get']('fqdn') }}:6080
 policymgr_http_enabled=true
 policymgr_https_keystore_file=
-policymgr_https_keystore_keyalias=rangeradmin
+policymgr_https_keystore_keyalias=
 policymgr_https_keystore_password=
+{% endif %}
+
 
 #Add Supported Components list below separated by semi-colon, default value is empty string to support all components
 #Example :  policymgr_supportedcomponents=hive,hbase,hdfs
