INFRAOP-5732: enable https for ranger communication

--- a/hadoop/conf/yarn/ranger.install.properties
+++ b/hadoop/conf/yarn/ranger.install.properties
@@ -26,7 +26,12 @@
 {%- if ranger_grains.items()|length > 0 %}
 {% set ranger_host = ranger_grains|first() %}
 {% set ranger_fqdn = ranger_grains[ranger_host]['fqdn'] %}
-POLICY_MGR_URL=http://{{ ranger_fqdn }}:6080
+{%- if hadoop.secure_mode %}
+{%- set protocol = 'https' %}
+{% else %}
+{%- set protocol = 'http' %}
+{%- endif %}
+POLICY_MGR_URL={{protocol}}://{{ ranger_fqdn }}:6080
 {% endif %}
 
 #
