--- a/hadoop/conf/hdfs/ranger.install.properties
+++ b/hadoop/conf/hdfs/ranger.install.properties
@@ -24,9 +24,14 @@
 {%- set ranger_target = 'G@role:ranger and G@clustername:' + grains['cluster_id'] -%} 
 {%- set ranger_grains = salt['mine.get'](ranger_target, 'grains.item', expr_form='compound') -%} 
 {%- if ranger_grains.items()|length > 0 %}
-{% set ranger_host = ranger_grains|first() %}
-{% set ranger_fqdn = ranger_grains[ranger_host]['fqdn'] %}
-POLICY_MGR_URL=http://{{ ranger_fqdn }}:6080
+{%- set ranger_host = ranger_grains|first() %}
+{%- set ranger_fqdn = ranger_grains[ranger_host]['fqdn'] %}
+{%- if hadoop.secure_mode %}
+{%- set protocol = 'https' %}
+{% else %}
+{%- set protocol = 'http' %}
+{%- endif %}
+POLICY_MGR_URL={{protocol}}://{{ ranger_fqdn }}:6080
 {% endif %}
 
 #
