INFRAOP-5732: implement ranger https

--- a/hadoop/conf/hdfs/ranger.install.properties
+++ b/hadoop/conf/hdfs/ranger.install.properties
@@ -24,14 +24,16 @@
 {%- set ranger_target = 'G@role:ranger and G@clustername:' + grains['cluster_id'] -%} 
 {%- set ranger_grains = salt['mine.get'](ranger_target, 'grains.item', expr_form='compound') -%} 
 {%- if ranger_grains.items()|length > 0 %}
-{%- set ranger_host = ranger_grains|first() %}
-{%- set ranger_fqdn = ranger_grains[ranger_host]['fqdn'] %}
+{% set ranger_host = ranger_grains|first() %}
+{% set ranger_fqdn = ranger_grains[ranger_host]['fqdn'] %}
 {%- if hadoop.secure_mode %}
 {%- set protocol = 'https' %}
+{%- set port = 6182 %}
 {% else %}
 {%- set protocol = 'http' %}
+{%- set port = 6080 %}
 {%- endif %}
-POLICY_MGR_URL={{protocol}}://{{ ranger_fqdn }}:6080
+POLICY_MGR_URL={{protocol}}://{{ ranger_fqdn }}:{{ port }}
 {% endif %}
 
 #
