--- a/hadoop/conf/knox/ranger.install.properties
+++ b/hadoop/conf/knox/ranger.install.properties
@@ -29,12 +29,13 @@
 {% set ranger_fqdn = ranger_grains[ranger_host]['fqdn'] %}
 {%- if hadoop.secure_mode %}
 {%- set protocol = 'https' %}
+{%- set port = 6182 %}
 {% else %}
 {%- set protocol = 'http' %}
+{%- set port = 6080 %}
 {%- endif %}
-POLICY_MGR_URL={{protocol}}://{{ ranger_fqdn }}:6080
+POLICY_MGR_URL={{protocol}}://{{ ranger_fqdn }}:{{ port }}
 {% endif %}
-
 #
 # This is the repository name created within policy manager
 #
