--- a/hadoop/conf/ranger/admin.install.properties
+++ b/hadoop/conf/ranger/admin.install.properties
@@ -103,7 +103,7 @@ audit_solr_zookeepers={{ zk.connection_string }}
 #
 
 {%- if  hadoop.secure_mode %}
-policymgr_external_url=https://{{ salt['grains.get']('fqdn') }}:6080
+policymgr_external_url=https://{{ salt['grains.get']('fqdn') }}
 policymgr_http_enabled=false
 policymgr_https_keystore_file=/home/ranger/.keystore
 policymgr_https_keystore_keyalias={{ grains['fqdn'] }}
