--- a/hadoop/conf/yarn/ranger.install.properties
+++ b/hadoop/conf/yarn/ranger.install.properties
@@ -28,10 +28,12 @@
 {% set ranger_fqdn = ranger_grains[ranger_host]['fqdn'] %}
 {%- if hadoop.secure_mode %}
 {%- set protocol = 'https' %}
+{%- set port = 6182 %}
 {% else %}
 {%- set protocol = 'http' %}
+{%- set port = 6080 %}
 {%- endif %}
-POLICY_MGR_URL={{protocol}}://{{ ranger_fqdn }}:6080
+POLICY_MGR_URL={{protocol}}://{{ ranger_fqdn }}:{{ port }}
 {% endif %}
 
 #
