--- a/hadoop/conf/knox/ranger.install.properties
+++ b/hadoop/conf/knox/ranger.install.properties
@@ -140,10 +140,17 @@ XAAUDIT.SOLR.SOLR_URL=http://{{ solr_fqdn }}:8983/solr/ranger_audits
 #
 # You do not need use SSL between agent and security admin tool, please leave these sample value as it is.
 #
+{% if hadoop.secure_mode %}
+SSL_KEYSTORE_FILE_PATH=/home/knox/.keystore
+SSL_KEYSTORE_PASSWORD={{ hadoop.keystore_pass }}
+SSL_TRUSTSTORE_FILE_PATH=/usr/lib/java/jre/lib/security/cacerts
+SSL_TRUSTSTORE_PASSWORD=changeit
+{% else %}
 SSL_KEYSTORE_FILE_PATH=/etc/knox/conf/ranger-plugin-keystore.jks
 SSL_KEYSTORE_PASSWORD=myKeyFilePassword
 SSL_TRUSTSTORE_FILE_PATH=/etc/knox/conf/ranger-plugin-truststore.jks
 SSL_TRUSTSTORE_PASSWORD=changeit
+{% endif %}
 
 
 #
