--- a/hadoop/conf/hive/ranger.install.properties
+++ b/hadoop/conf/hive/ranger.install.properties
@@ -1,4 +1,5 @@
 {%- from 'hadoop/ranger/settings.sls' import ranger with context -%}
+{%- from 'hadoop/settings.sls' import hadoop with context -%}
 {%- from 'hadoop/hive/settings.sls' import hive with context -%}
 {%- from 'zookeeper/settings.sls' import zk with context -%}
 # Licensed to the Apache Software Foundation (ASF) under one or more
