--- a/hadoop/conf/ranger/usersync.install.properties
+++ b/hadoop/conf/ranger/usersync.install.properties
@@ -1,4 +1,5 @@
 {%- from 'hadoop/ranger/settings.sls' import ranger with context -%}
+{%- from 'hadoop/settings.sls'        import hadoop with context -%}
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
 # this work for additional information regarding copyright ownership.
