--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -115,10 +115,18 @@
   # default=false
 
   # Filename of SSL Certificate
+  {%- if hadoop.secure_mode %}
+  ssl_certificate=/home/{{ username }}/ssl/{{ hadoop.cert_name}}
+  {%- else %}
   ## ssl_certificate=
+  {% endif %}
 
   # Filename of SSL RSA Private Key
+  {%- if hadoop.secure_mode %}
+  ssl_private_key=/home/{{ username }}/ssl/{{ hadoop.cert_name}}.key
+  {%- else %}
   ## ssl_private_key=
+  {%- endif %}
 
   # Filename of SSL Certificate Chain
   ## ssl_certificate_chain=
@@ -139,7 +147,11 @@
   ## secure_content_security_policy="script-src 'self' 'unsafe-inline' 'unsafe-eval' *.google-analytics.com *.doubleclick.net data:;img-src 'self' *.google-analytics.com *.doubleclick.net http://*.tile.osm.org *.tile.osm.org *.gstatic.com data:;style-src 'self' 'unsafe-inline' fonts.googleapis.com;connect-src 'self';frame-src *;child-src 'self' data: *.vimeo.com;object-src 'none'"
 
   # Strict-Transport-Security HTTP Strict Transport Security(HSTS) is a policy which is communicated by the server to the user agent via HTTP response header field name "Strict-Transport-Security". HSTS policy specifies a period of time during which the user agent(browser) should only access the server in a secure fashion(https).
+  {%- if hadoop.secure_mode %}
+  secure_ssl_redirect=True
+  {%- else %}
   ## secure_ssl_redirect=False
+  {%- endif %}
   ## secure_redirect_host=0.0.0.0
   ## secure_redirect_exempt=[]
   ## secure_hsts_seconds=31536000
