--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -1,6 +1,10 @@
 {%- from 'hadoop/settings.sls' import hadoop with context -%}
 {%- from 'hadoop/hue/settings.sls' import hue with context -%}
 {%- from 'hadoop/settings.sls' import hadoop with context -%}
+{%- from 'hadoop/hdfs/settings.sls' import hdfs with context -%}
+{%- from 'hadoop/hive/settings.sls' import hive with context -%}
+{%- from 'hadoop/solr/settings.sls' import solr with context -%}
+{%- from 'zookeeper/settings.sls'   import zk   with context -%}
 # Hue configuration file
 # ===================================
 #
@@ -182,7 +186,7 @@
 
   # Help improve Hue with anonymous usage analytics.
   # Use Google Analytics to see how many times an application or specific section of an application is used, nothing more.
-  ## collect_usage=true
+  collect_usage=false
 
   # Tile layer server URL for the Leaflet map charts
   # Read more on http://leafletjs.com/reference.html#tilelayer
@@ -222,7 +226,7 @@
   ## app_blacklist=
 
   # Id of the cluster where Hue is located.
-  ## cluster_id='default'
+  cluster_id='{{ grains['cluster_id']}}'
 
   # Choose whether to show the new SQL editor.
   ## use_new_editor=true
@@ -249,7 +253,7 @@
 
   # The directory where to store the auditing logs. Auditing is disable if the value is empty.
   # e.g. /var/log/hue/audit.log
-  ## audit_event_log_dir=
+  audit_event_log_dir={{ hue.install_dir}}/hue/logs/audit_logs
 
   # Size in KB/MB/GB for audit log to rollover.
   ## audit_log_max_file_size=100MB
@@ -366,6 +370,9 @@
     # Multiple Authentication backends are supported by specifying a comma-separated list in order of priority.
     # However, in order to enable OAuthBackend, it must be the ONLY backend configured.
     ## backend=desktop.auth.backend.AllowFirstUserDjangoBackend
+    {%- if hadoop.secure_mode %}
+    backend=desktop.auth.backend.LdapBackend
+    {%- endif %}
 
     # Class which defines extra accessor methods for User objects.
     ## user_aug=desktop.auth.backend.DefaultUserAugmentor
@@ -507,6 +514,15 @@
     # 2 for logging the method calls with arguments and the complete results and 9 for also logging the traceback of method calls.
     ## trace_level=0
 
+    {%- if hadoop.secure_mode %}
+    base_dn="{{ ranger.ldap_searchbase }}"
+    ldap_url="ldaps://{{ ranger.ldap_host }}:{{ ranger.ldap_port }}"
+    use_start_tls=true
+    bind_dn="{{ranger.ldap_user}}"
+    bind_password={{ ranger.ldap_pass }}
+    ldap_username_pattern="{{ hue.ldap_username_pattern }}"
+    search_bind_authentication=true
+    {%- endif %}
     [[[users]]]
 
       # Base filter for searching for users
@@ -514,6 +530,10 @@
 
       # The username attribute in the LDAP schema
       ## user_name_attr=sAMAccountName
+      {%- if hadoop.secure_mode %}
+      user_filter={{ hue.ldap_user_filter }}
+      user_name_attr=sAMAccountName
+      {%- endif %}
 
     [[[groups]]]
 
@@ -674,6 +694,9 @@
     # The cookie containing the users' session ID and csrf cookie will be secure.
     # Should only be enabled with HTTPS.
     ## secure=false
+    {%- if hadoop.secure_mode %}
+    secure=true
+    {%- endif %}
 
     # The cookie containing the users' session ID and csrf cookie will use the HTTP only flag.
     ## http_only=true
@@ -718,6 +741,13 @@
 
     # Mutual authentication from the server, attaches HTTP GSSAPI/Kerberos Authentication to the given Request object
     ## mutual_authentication="OPTIONAL" or "REQUIRED" or "DISABLED"
+    {%- if hadoop.secure_mode %}
+    hue_keytab=/etc/krb5/hue.keytab
+    hue_principal=hue//{{grains['fqdn']}}@{{grains['cluster_id'] | upper }}
+    ccache_path=/var/run/hue/hue_krb5_ccache
+    kinit_path=/usr/bin/kinit
+    mutual_authentication="OPTIONAL" 
+    {%- endif %}
 
   # Configuration options for using OAuthBackend (Core) login
   # ------------------------------------------------------------------------
@@ -992,25 +1022,42 @@
 
     [[[default]]]
       # Enter the filesystem uri
-      fs_defaultfs=hdfs://localhost:8020
+      {%- if hdfs.namenode_count > 1 %}
+      fs_defaultfs=hdfs://{{hdfs.namenode_hosts | first() }}:8020
+      {%- endif %}
+      {%- if hdfs.namenode_count == 1 %}
+      fs_defaultfs=hdfs://{{hdfs.namenode}}:8020
+      {%- endif %}
 
       # NameNode logical name.
-      ## logical_name=
+      logical_name=nn1
 
       # Use WebHdfs/HttpFs as the communication mechanism.
       # Domain should be the NameNode or HttpFs host.
       # Default port is 14000 for HttpFs.
-      ## webhdfs_url=http://localhost:50070/webhdfs/v1
+      {%- if hadoop.secure_mode %}
+      {%- set hdfs_protocol = 'https' %}
+      {%- set hdfs_port = 50470 %}
+      {%- else %}
+      {%- set hdfs_protocol = 'http' %}
+      {%- set hdfs_port = 50070 %}
+      {%- endif %}
+      {%- if hdfs.namenode_count > 1 %}
+      webhdfs_url={{ hdfs_protocol}}://{{ hdfs.namenode_hosts | first() }}:{{ hdfs_port}}/webhdfs/v1
+      {%- endif %}
+      {%- if hdfs.namenode_count == 1 %}
+      webhdfs_url={{ hdfs_protocol}}://{{ hdfs.namenode }}:{{ hdfs_port}}/webhdfs/v1
+      {%- endif %}
 
       # Change this if your HDFS cluster is Kerberos-secured
-      ## security_enabled=false
+      security_enabled={%- if hadoop.secure_mode -%}true{%- else -%}false{%- endif %}
 
       # In secure mode (HTTPS), if SSL certificates from YARN Rest APIs
       # have to be verified against certificate authority
       ## ssl_cert_ca_verify=True
 
       # Directory of the Hadoop configuration
-      ## hadoop_conf_dir=$HADOOP_CONF_DIR when set or '/etc/hadoop/conf'
+      hadoop_conf_dir=/etc/hadoop/conf
 
   # Configuration for YARN (MR2)
   # ------------------------------------------------------------------------
@@ -1073,13 +1120,18 @@
 
   # Host where HiveServer2 is running.
   # If Kerberos security is enabled, use fully-qualified domain name (FQDN).
-  ## hive_server_host=localhost
+  {%- set thrift_port = hive_cfg.get('hive.server2.thrift.http.port', {}) -%}
+  {%- set thrift_path = hive_cfg.get('hive.server2.thrift.http.path', {}) -%}
+  {%- set hive_target = 'G@role:hive and G@clustername:' + grains['cluster_id'] -%}
+  {%- set hive_grains = salt['mine.get'](hive_target, 'grains.item','compound') -%}
+  {%- if thrift_port and thrift_path and hive_grains and hive_grains.keys()|length == 1 %}
+  hive_server_host={%- for minion in hive_grains.items() %}{{ minion['fqdn']}}{%- endfor %}
 
   # Port where HiveServer2 Thrift server runs on.
-  ## hive_server_port=10000
+  hive_server_port={{ thrift_port }}
 
   # Hive configuration directory, where hive-site.xml is located
-  ## hive_conf_dir=/etc/hive/conf
+  hive_conf_dir=/etc/hive/conf
 
   # Timeout in seconds for thrift calls to Hive service
   ## server_conn_timeout=120
@@ -1352,6 +1404,11 @@
 
   # URL of the Solr Server
   ## solr_url=http://localhost:8983/solr/
+  {%- set solr_target = 'G@role:solr and G@clustername:' + grains['cluster_id'] -%}
+  {%- set solr_grains = salt['mine.get'](solr_target, 'grains.item', expr_form='compound') -%}
+  {%- if solr_grains.items()| length > 0 %}
+  solr_url=http://{{ solr_grains.keys() | first()}}:8983/solr/
+  {%- endif %}
 
   # Requires FQDN in solr_url if enabled
   ## security_enabled=false
@@ -1443,13 +1500,13 @@
 [security]
 
   # Use Sentry API V1 for Hive.
-  ## hive_v1=true
+  ## hive_v1=false
 
   # Use Sentry API V2 for Hive.
   ## hive_v2=false
 
   # Use Sentry API V2 for Solr.
-  ## solr_v2=true
+  ## solr_v2=false
 
 
 ###########################################################################
@@ -1463,7 +1520,7 @@
     [[[default]]]
       # Zookeeper ensemble. Comma separated list of Host/Port.
       # e.g. localhost:2181,localhost:2182,localhost:2183
-      ## host_ports=localhost:2181
+      host_ports={{ zk.connection_string}}
 
       # The URL of the REST contrib service (required for znode browsing).
       ## rest_url=http://localhost:9998
@@ -1601,7 +1658,7 @@
 [libzookeeper]
   # ZooKeeper ensemble. Comma separated list of Host/Port.
   # e.g. localhost:2181,localhost:2182,localhost:2183
-  ## ensemble=localhost:2181
+  ensemble={{ zk.connection_string }}
 
   # Name of Kerberos principal when using security.
   ## principal_name=zookeeper
