INFRAOP-5824: fix endif

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -1129,6 +1129,7 @@
 
   # Port where HiveServer2 Thrift server runs on.
   hive_server_port={{ thrift_port }}
+  {%- endif %}
 
   # Hive configuration directory, where hive-site.xml is located
   hive_conf_dir=/etc/hive/conf
