INFRAOP-5824: fix missing import

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -1,10 +1,10 @@
-{%- from 'hadoop/settings.sls' import hadoop with context -%}
-{%- from 'hadoop/hue/settings.sls' import hue with context -%}
-{%- from 'hadoop/settings.sls' import hadoop with context -%}
-{%- from 'hadoop/hdfs/settings.sls' import hdfs with context -%}
-{%- from 'hadoop/hive/settings.sls' import hive with context -%}
-{%- from 'hadoop/solr/settings.sls' import solr with context -%}
-{%- from 'zookeeper/settings.sls'   import zk   with context -%}
+{%- from 'hadoop/ranger/settings.sls' import ranger with context -%}
+{%- from 'hadoop/hdfs/settings.sls'   import hdfs   with context -%}
+{%- from 'hadoop/hive/settings.sls'   import hive   with context -%}
+{%- from 'hadoop/solr/settings.sls'   import solr   with context -%}
+{%- from 'hadoop/hue/settings.sls'    import hue    with context -%}
+{%- from 'zookeeper/settings.sls'     import zk     with context -%}
+{%- from 'hadoop/settings.sls'        import hadoop with context -%}
 # Hue configuration file
 # ===================================
 #
