INFRAOP-5824: fix hive_cfg

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -5,6 +5,7 @@
 {%- from 'hadoop/hue/settings.sls'    import hue    with context -%}
 {%- from 'zookeeper/settings.sls'     import zk     with context -%}
 {%- from 'hadoop/settings.sls'        import hadoop with context -%}
+{%- set hive_cfg = hive.get('config_hive_site', {}) %}
 # Hue configuration file
 # ===================================
 #
