INFRAOP-5824: fix hive fqdn

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -744,7 +744,7 @@
     ## mutual_authentication="OPTIONAL" or "REQUIRED" or "DISABLED"
     {%- if hadoop.secure_mode %}
     hue_keytab=/etc/krb5/hue.keytab
-    hue_principal=hue//{{grains['fqdn']}}@{{grains['cluster_id'] | upper }}
+    hue_principal=hue/{{grains['fqdn']}}@{{grains['cluster_id'] | upper }}
     ccache_path=/var/run/hue/hue_krb5_ccache
     kinit_path=/usr/bin/kinit
     mutual_authentication="OPTIONAL" 
@@ -1125,8 +1125,8 @@
   {%- set thrift_path = hive_cfg.get('hive.server2.thrift.http.path', {}) -%}
   {%- set hive_target = 'G@role:hive and G@clustername:' + grains['cluster_id'] -%}
   {%- set hive_grains = salt['mine.get'](hive_target, 'grains.item','compound') -%}
-  {%- if thrift_port and thrift_path and hive_grains and hive_grains.keys()|length == 1 %}
-  hive_server_host={%- for minion in hive_grains.items() %}{{ minion['fqdn']}}{%- endfor %}
+  {%- if thrift_port and thrift_path and hive_grains and hive_grains.keys()|length > 0 %}
+  hive_server_host={{ hive_grains.keys() | first()}}
 
   # Port where HiveServer2 Thrift server runs on.
   hive_server_port={{ thrift_port }}
