INFRAOP-5824: fix hive fqdn

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -1129,7 +1129,7 @@
   hive_server_host={{ hive_grains.keys() | first()}}
 
   # Port where HiveServer2 Thrift server runs on.
-  hive_server_port={{ thrift_port }}
+  hive_server_port={{ thrift_port.value }}
   {%- endif %}
 
   # Hive configuration directory, where hive-site.xml is located
@@ -1502,13 +1502,13 @@
 [security]
 
   # Use Sentry API V1 for Hive.
-  ## hive_v1=false
+  hive_v1=false
 
   # Use Sentry API V2 for Hive.
-  ## hive_v2=false
+  hive_v2=false
 
   # Use Sentry API V2 for Solr.
-  ## solr_v2=false
+  solr_v2=false
 
 
 ###########################################################################
@@ -1676,6 +1676,12 @@
   # (IE sqlite, mysql, psql, and oracle in the list below).
 
   [[databases]]
+    {%- if hue.database == 'sqlite' %}
+    [[[sqlite]]]
+      nice_name=SQLite
+      name={{ hue.sqlite_path }}
+      engine=sqlite
+    {%- endif %}
     # sqlite configuration.
     ## [[[sqlite]]]
       # Name to show in the UI.
