INFRAOP-5824: switch hue to mysql backend

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -1676,11 +1676,23 @@
   # (IE sqlite, mysql, psql, and oracle in the list below).
 
   [[databases]]
-    {%- if hue.database == 'sqlite' %}
+    {%- if hue.database_type == 'sqlite' %}
     [[[sqlite]]]
       nice_name=SQLite
       name={{ hue.sqlite_path }}
       engine=sqlite
+      options={}
+    {%- endif %}
+    {%- if hue.database_type == 'mysql' %}
+    [[[mysql]]]
+      nice_name="My SQL DB"
+      name={{ hue.database_name }}
+      engine=mysql
+      host=localhost
+      port=3306
+      user=hue
+      password={{ hue.database_password }}
+      options={}
     {%- endif %}
     # sqlite configuration.
     ## [[[sqlite]]]
