INFRAOP-5838: hue database config

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -658,6 +658,22 @@
   # see http://docs.djangoproject.com/en/1.4/ref/settings/#database-engine
   # ------------------------------------------------------------------------
   [[database]]
+   {%- if hue.database_type == 'sqlite' %}
+      name={{ hue.sqlite_path }}
+      engine=sqlite
+      name=desktop/desktop.db
+      options={}
+    {%- endif %}
+    {%- if hue.database_type == 'mysql' %}
+      name={{ hue.database_name }}
+      engine=mysql
+      host=localhost
+      port=3306
+      user=hue
+      password={{ hue.database_password }}
+      options={}
+    {%- endif %}
+
     # Database engine is typically one of:
     # postgresql_psycopg2, mysql, sqlite3 or oracle.
     #
@@ -1676,25 +1692,7 @@
   # (IE sqlite, mysql, psql, and oracle in the list below).
 
   [[databases]]
-    {%- if hue.database_type == 'sqlite' %}
-    [[[sqlite]]]
-      nice_name=SQLite
-      name={{ hue.sqlite_path }}
-      engine=sqlite
-      options={}
-    {%- endif %}
-    {%- if hue.database_type == 'mysql' %}
-    [[[mysql]]]
-      nice_name="My SQL DB"
-      name={{ hue.database_name }}
-      engine=mysql
-      host=localhost
-      port=3306
-      user=hue
-      password={{ hue.database_password }}
-      options={}
-    {%- endif %}
-    # sqlite configuration.
+     # sqlite configuration.
     ## [[[sqlite]]]
       # Name to show in the UI.
       ## nice_name=SQLite
