INFRAOP-5808: livy config and monitoring

--- a/hadoop/conf/livy/livy.conf
+++ b/hadoop/conf/livy/livy.conf
@@ -14,16 +14,6 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-#
-# Use this keystore for the SSL certificate and key.
-# livy.keystore =
-
-# Specify the keystore password.
-# livy.keystore.password =
-#
-# Specify the key password.
-# livy.key-password =
-
 
 {% if hadoop.secure_mode %}
 livy.server.auth.kerberos.keytab = /etc/krb5/spnego.livy.keytab
@@ -34,40 +24,49 @@ livy.server.launch.kerberos.principal = livy/_HOST@HADOOP-PRE-C3
 livy.keystore = /home/{{username}}/.keystore
 livy.keystore.password = {{ keystore_pass }}
 livy.key-password = {{ keystore_pass }}
+
+
+livy.server.access-control.enabled = true
+livy.server.access-control.users = livy,hue,knox
+livy.superusers = livy,hue,knox
+
 {% endif %}
 
 
 
 # What host address to start the server on. By default, Livy will bind to all network interfaces.
-# livy.server.host = 0.0.0.0
+livy.server.host = 0.0.0.0
 
 # What port to start the server on.
-# livy.server.port = 8998
+livy.server.port = 8998
 
 # What spark master Livy sessions should use.
-livy.spark.master = yarn-cluster
+livy.spark.master = yarn
 
 # What spark deploy mode Livy sessions should use.
 livy.spark.deploy-mode = cluster
 
 # Configure Livy server http request and response header size.
-# livy.server.request-header.size = 131072
-# livy.server.response-header.size = 131072
+livy.server.request-header.size = 131072
+livy.server.response-header.size = 131072
 
 # Enabled to check whether timeout Livy sessions should be stopped.
-# livy.server.session.timeout-check = true
+livy.server.session.timeout-check = true
 
 # Time in milliseconds on how long Livy will wait before timing out an idle session.
-# livy.server.session.timeout = 1h
+livy.server.session.timeout = 1h
 #
 # How long a finished session state should be kept in LivyServer for query.
-# livy.server.session.state-retain.sec = 600s
+livy.server.session.state-retain.sec = 600s
 
 # If livy should impersonate the requesting users when creating a new session.
-# livy.impersonation.enabled = true
+{%- if hadoop.secure_mode %}
+livy.impersonation.enabled = true {%- else %}
+livy.impersonation.enabled = false
+{% endif %}
 
 # Logs size livy can cache for each session/batch. 0 means don't cache the logs.
-# livy.cache-log.size = 200
+livy.cache-log.size = 200
 
 # Comma-separated list of Livy RSC jars. By default Livy will upload jars from its installation
 # directory every time a session is started. By caching these files in HDFS, for example, startup
@@ -122,22 +121,22 @@ livy.spark.deploy-mode = cluster
 # livy.server.recovery.state-store.url =
 
 # If Livy can't find the yarn app within this time, consider it lost.
-# livy.server.yarn.app-lookup-timeout = 120s
+livy.server.yarn.app-lookup-timeout = 120s
 # When the cluster is busy, we may fail to launch yarn app in app-lookup-timeout, then it would
 # cause session leakage, so we need to check session leakage.
 # How long to check livy session leakage
-# livy.server.yarn.app-leakage.check-timeout = 600s
+livy.server.yarn.app-leakage.check-timeout = 600s
 # how often to check livy session leakage
-# livy.server.yarn.app-leakage.check-interval = 60s
+livy.server.yarn.app-leakage.check-interval = 60s
 
 # How often Livy polls YARN to refresh YARN app state.
-# livy.server.yarn.poll-interval = 5s
+livy.server.yarn.poll-interval = 5s
 #
 # Days to keep Livy server request logs.
-# livy.server.request-log-retain.days = 5
+livy.server.request-log-retain.days = 5
 
 # If the Livy Web UI should be included in the Livy Server. Enabled by default.
-# livy.ui.enabled = true
+livy.ui.enabled = true
 
 # Whether to enable Livy server access control, if it is true then all the income requests will
 # be checked if the requested user has permission.
