INFRAOP-5824: syntax hue.ini

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -436,7 +436,7 @@
   {%- endif %}
   sql_server_host={{livy_grains.keys() | first() }}
   sql_server_port=10001
-
+  {%- endif %}
 
 ###########################################################################
 # Settings to configure the Oozie app
