INFRAOP-5824: fix missing include

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -1,5 +1,6 @@
 {%- from 'hadoop/ranger/settings.sls' import ranger with context -%}
 {%- from 'hadoop/hdfs/settings.sls'   import hdfs   with context -%}
+{%- from 'hadoop/yarn/settings.sls'   import yarn   with context -%}
 {%- from 'hadoop/hive/settings.sls'   import hive   with context -%}
 {%- from 'hadoop/solr/settings.sls'   import solr   with context -%}
 {%- from 'hadoop/hue/settings.sls'    import hue    with context -%}
