INFRAOP-5824: correct hue.ini yarn conf

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -360,7 +360,7 @@
     {{ '[[[default]]]' if not loop.last else '[[[ha]]]' }}
       ## resourcemanager_port=8032
       submit_to=True
-      logical_name={{ loop.index }}
+      logical_name=rm{{ loop.index }}
       {%- if hadoop.secure_mode %}
       security_enabled=True{%- else %}
       security_enabled=False{%- endif %}
