INFRAOP-5824: hue.ini correction

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -1049,7 +1049,7 @@
 
     [[[default]]]
       # Enter the filesystem uri
-      {%- if hdfs.namenode_count > 1 %}
+      {%- if hdfs.namenode_count == 2 %}
       fs_defaultfs=hdfs://{{hdfs.namenode_hosts | first() }}:8020
       {%- endif %}
       {%- if hdfs.namenode_count == 1 %}
@@ -1114,6 +1114,7 @@
 
   # Port where HiveServer2 Thrift server runs on.
   hive_server_port={{ thrift_port.value }}
+  {%- endif %}
 
   # Hive configuration directory, where hive-site.xml is located
   hive_conf_dir=/etc/hive/conf
@@ -1165,7 +1166,6 @@
 
     # Choose whether Hue should validate certificates received from the server.
     ## validate=true
-  {%- endif %}
 
 ###########################################################################
 # Settings to configure Metastore
@@ -1253,8 +1253,8 @@
   security_enabled=false
   ssl_cert_ca_verify=false
   {%- endif %}
-  sql_server_host={{livy_grains.keys() | first() }}
-  sql_server_port=10001
+  #sql_server_host={{livy_grains.keys() | first() }}
+  #sql_server_port=10001
   {%- endif %}
 
 ###########################################################################
