INFRAOP-5854: reference uploaded jars for livy

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -268,7 +268,7 @@
 
   # The directory where to store the auditing logs. Auditing is disable if the value is empty.
   # e.g. /var/log/hue/audit.log
-  audit_event_log_dir={{ hue.install_dir}}/hue/logs/audit_logs
+  audit_event_log_dir={{ hue.install_dir}}/hue/logs/audit_logs/audit.log
 
   # Size in KB/MB/GB for audit log to rollover.
   ## audit_log_max_file_size=100MB
