--- a/hadoop/conf/livy/livy.conf
+++ b/hadoop/conf/livy/livy.conf
@@ -24,12 +24,7 @@ livy.server.launch.kerberos.principal = livy/_HOST@HADOOP-PRE-C3
 livy.keystore = /home/{{username}}/.keystore
 livy.keystore.password = {{ keystore_pass }}
 livy.key-password = {{ keystore_pass }}
-
-
-livy.server.access-control.enabled = true
-livy.server.access-control.users = livy,hue,knox
 livy.superusers = livy,hue,knox
-
 {% endif %}
 
 
@@ -72,13 +67,22 @@ livy.cache-log.size = 200
 # directory every time a session is started. By caching these files in HDFS, for example, startup
 # time of sessions on YARN can be reduced.
 # livy.rsc.jars =
+{%- if livy.rsc_jars %}
+livy.rsc.jars = {{ livy.rsc_jars }}
+{%- else %}
+# livy.rsc.jars =
+{%- endif %}
 
 # Comma-separated list of Livy REPL jars. By default Livy will upload jars from its installation
 # directory every time a session is started. By caching these files in HDFS, for example, startup
 # time of sessions on YARN can be reduced. Please list all the repl dependencies including
 # livy-repl_2.10 and livy-repl_2.11 jars, Livy will automatically pick the right dependencies in
 # session creation.
+{%- if livy.repl_jars %}
+livy.repl.jars = {{ livy.repl_jars }}
+{%- else %}
 # livy.repl.jars =
+{%- endif %}
 
 # Location of PySpark archives. By default Livy will upload the file from SPARK_HOME, but
 # by caching the file in HDFS, startup time of PySpark sessions on YARN can be reduced.
@@ -140,11 +144,17 @@ livy.ui.enabled = true
 
 # Whether to enable Livy server access control, if it is true then all the income requests will
 # be checked if the requested user has permission.
-# livy.server.access-control.enabled = false
+
+livy.server.access-control.enabled = {% if hadoop.secure_mode %}true{% else %}false{% endif %}
 
 # Allowed users to access Livy, by default any user is allowed to access Livy. If user want to
 # limit who could access Livy, user should list all the permitted users with comma separated.
-# livy.server.access-control.allowed-users = *
+{%- if hadoop.secure_mode %}
+{%- set acl_user = 'livy,hue,knox' %}
+{%- else %}
+{%- set acl_user = '*' %}
+{%- endif %}
+livy.server.access-control.allowed-users = {{ acl_user }}
 
 # A list of users with comma separated has the permission to change other user's submitted
 # session, like submitting statements, deleting session.
