--- a/hadoop/conf/livy/livy.conf
+++ b/hadoop/conf/livy/livy.conf
@@ -1,4 +1,5 @@
 {%- from 'hadoop/settings.sls' import hadoop with context -%}
+{%- from 'hadoop/livy/settings.sls' import livy with context -%}
 #
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
