INFRAOP-5824: correct hive context for livy/spark

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -909,9 +909,9 @@
       name=Impala
       interface=hiveserver2
 
-    # [[[sparksql]]]
-    #   name=SparkSql
-    #   interface=hiveserver2
+    [[[sparksql]]]
+      name=SparkSql
+      interface=hiveserver2
 
     [[[spark]]]
       name=Scala
