--- a/hadoop/conf/livy/livy.conf
+++ b/hadoop/conf/livy/livy.conf
@@ -1,5 +1,8 @@
 {%- from 'hadoop/settings.sls' import hadoop with context -%}
 {%- from 'hadoop/livy/settings.sls' import livy with context -%}
+{%- from 'hadoop/hive/settings.sls'   import hive   with context -%}
+{%- set hive_target = 'G@role:hive and G@clustername:' + grains['cluster_id'] -%}
+{%- set hive_grains = salt['mine.get'](hive_target, 'grains.item','compound') -%}
 #
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
@@ -104,7 +107,11 @@ livy.repl.jars = {{ livy.repl_jars }}
 
 # Whether to enable HiveContext in livy interpreter, if it is true hive-site.xml will be detected
 # on user request and then livy server classpath automatically.
+{%- if hive_grains.keys()|length > 0 %}
+livy.repl.enable-hive-context = true
+{%- else %}
 # livy.repl.enable-hive-context =
+{%- endif %}
 
 # Recovery mode of Livy. Possible values:
 # off: Default. Turn off recovery. Every time Livy shuts down, it stops and forgets all sessions.
