--- a/hadoop/conf/livy/livy.conf
+++ b/hadoop/conf/livy/livy.conf
@@ -90,11 +90,19 @@ livy.repl.jars = {{ livy.repl_jars }}
 
 # Location of PySpark archives. By default Livy will upload the file from SPARK_HOME, but
 # by caching the file in HDFS, startup time of PySpark sessions on YARN can be reduced.
-# livy.pyspark.archives =
+{%- if livy.pyspark %}
+# livy.pyspark.archives = {{ livy.pyspark }}
+{%- else %}
+livy.pyspark.archives =
+{%- endif %}
 
 # Location of the SparkR package. By default Livy will upload the file from SPARK_HOME, but
 # by caching the file in HDFS, startup time of R sessions on YARN can be reduced.
+{%- if livy.sparkr %}
+livy.sparkr.package = {{ livy.sparkr }}
+{%- else %}
 # livy.sparkr.package =
+{%- endif %}
 
 # List of local directories from where files are allowed to be added to user sessions. By
 # default it's empty, meaning users can only reference remote URIs when starting their
