--- a/hadoop/conf/livy/livy.conf
+++ b/hadoop/conf/livy/livy.conf
@@ -91,9 +91,9 @@ livy.repl.jars = {{ livy.repl_jars }}
 # Location of PySpark archives. By default Livy will upload the file from SPARK_HOME, but
 # by caching the file in HDFS, startup time of PySpark sessions on YARN can be reduced.
 {%- if livy.pyspark %}
-# livy.pyspark.archives = {{ livy.pyspark }}
+livy.pyspark.archives = {{ livy.pyspark }}
 {%- else %}
-livy.pyspark.archives =
+# livy.pyspark.archives =
 {%- endif %}
 
 # Location of the SparkR package. By default Livy will upload the file from SPARK_HOME, but
