--- a/hadoop/conf/spark/spark-defaults.conf
+++ b/hadoop/conf/spark/spark-defaults.conf
@@ -26,6 +26,6 @@
 # spark.serializer                 org.apache.spark.serializer.KryoSerializer
 # spark.driver.memory              5g
 # spark.executor.extraJavaOptions  -XX:+PrintGCDetails -Dkey=value -Dnumbers="one two three"
-{% spark.yarn_archive %}
+{% if spark.yarn_archive %}
 spark.yarn.archive	{{ spark.yarn_archive }}
 {% endif %}
