INFRAOP-5824: fix config regression

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -229,7 +229,7 @@
 
   # Comma-separated list of Django middleware classes to use.
   # See https://docs.djangoproject.com/en/1.4/ref/middleware/ for more details on middlewares in Django.
-  middleware=desktop.auth.backend.LdapSynchronizationBackend
+  ## middleware=desktop.auth.backend.LdapSynchronizationBackend
 
   # Comma-separated list of regular expressions, which match the redirect URL.
   # For example, to restrict to your local domain and FQDN, the following value can be used:
