INFRAOP-5886: nifi syntax

--- a/hadoop/conf/nifi/bootstrap.conf
+++ b/hadoop/conf/nifi/bootstrap.conf
@@ -33,8 +33,8 @@ graceful.shutdown.seconds=20
 java.arg.1=-Dorg.apache.jasper.compiler.disablejsr199=true
 
 # JVM memory settings
-java.arg.2=-Xms{{ nifi.min_mem %}
-java.arg.3=-Xmx{{ nifi.max_mem %}
+java.arg.2=-Xms{{ nifi.min_mem }}
+java.arg.3=-Xmx{{ nifi.max_mem }}
 
 # Enable Remote Debugging
 #java.arg.debug=-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=8000
