--- a/hadoop/conf/nifi/nifi.properties
+++ b/hadoop/conf/nifi/nifi.properties
@@ -207,7 +207,7 @@ nifi.security.user.knox.audiences=
 
 # cluster common properties (all nodes must have same values) #
 nifi.cluster.protocol.heartbeat.interval=5 sec
-nifi.cluster.protocol.is.secure={%- if hadoop.secure_mode -%}true{%- else %-}false{%- endif %}
+nifi.cluster.protocol.is.secure={%- if hadoop.secure_mode -%}true{%- else -%}false{%- endif %}
 
 # cluster node properties (only configure for cluster nodes) #
 nifi.cluster.is.node=true
