INFRAOP-5886: knoxsso for nifi

--- a/hadoop/conf/nifi/nifi.properties
+++ b/hadoop/conf/nifi/nifi.properties
@@ -1,4 +1,5 @@
 {% from 'hadoop/nifi/settings.sls' import nifi with context %}
+{% from 'hadoop/knox/settings.sls' import knox with context %}
 {% from 'hadoop/settings.sls' import hadoop with context %}
 {%- from 'zookeeper/settings.sls' import zk with context %}
 # Licensed to the Apache Software Foundation (ASF) under one or more
@@ -123,7 +124,7 @@ nifi.components.status.snapshot.frequency=1 min
 
 # Site to Site properties
 nifi.remote.input.host={{ grains['fqdn'] }}
-nifi.remote.input.secure=false
+nifi.remote.input.secure={%- if hadoop.secure_mode -%}true{%- else -%}false{%- endif %}
 nifi.remote.input.socket.port=
 nifi.remote.input.http.enabled=true
 nifi.remote.input.http.transaction.ttl=30 sec
@@ -190,10 +191,21 @@ nifi.security.user.oidc.client.secret=
 nifi.security.user.oidc.preferred.jwsalgorithm=
 
 # Apache Knox SSO Properties #
+{%- if nifi.knoxsso %}
+{%- set knox_target = 'G@role:knox and G@clustername:' + grains['cluster_id'] -%}
+{%- set knox_grains = salt['mine.get'](knox_target, 'grains.item', tgt_type='compound') -%}
+{%- if knox_grains.items()|length > 0 %}{%- set knox_host_fqdn = (knox_grains.items() | first)['fqdn'] %}{%- else -%}{%- set knox_host_fqdn = '' %}{% endif %}
+{% set knox_url = salt['pillar.get']('knox:config:gateway-site:gateway.frontend.url:value', knox_host_fqdn) %}
+nifi.security.user.knox.url=https://{{ knox_url }}:{{ knox.gateway_port}}/{{ knox.gateway_path }}/knoxsso/api/v1/websso
+nifi.security.user.knox.publicKey=/etc/ssl/certs/wildcard.jamba.net
+nifi.security.user.knox.audiences={{ nifi.knox_audience }}
+{%- else %}
 nifi.security.user.knox.url=
 nifi.security.user.knox.publicKey=
-nifi.security.user.knox.cookieName=hadoop-jwt
 nifi.security.user.knox.audiences=
+{%- endif %}
+nifi.security.user.knox.cookieName=hadoop-jwt
+
 
 # Identity Mapping Properties #
 # These properties allow normalizing user identities such that identities coming from different identity providers
@@ -212,7 +224,7 @@ nifi.cluster.protocol.is.secure={%- if hadoop.secure_mode -%}true{%- else -%}fal
 # cluster node properties (only configure for cluster nodes) #
 nifi.cluster.is.node=true
 nifi.cluster.node.address={{ grains['fqdn'] }}
-nifi.cluster.node.protocol.port=
+nifi.cluster.node.protocol.port=10001
 nifi.cluster.node.protocol.threads=10
 nifi.cluster.node.protocol.max.threads=50
 nifi.cluster.node.event.history.size=25
