INFRAOP-5886: nifi ranger config

--- a/hadoop/conf/nifi/nifi.properties
+++ b/hadoop/conf/nifi/nifi.properties
@@ -163,7 +163,7 @@ nifi.security.truststore=/usr/lib/java/jre/lib/security/cacerts
 nifi.security.truststoreType=JKS
 nifi.security.truststorePasswd=changeit
 nifi.security.needClientAuth=true
-nifi.security.user.authorizer=managed-authorizer
+nifi.security.user.authorizer={%- if nifi.ranger_auth -%}ranger-provider{%- else -%}managed-authorizer{%- endif %}
 nifi.security.user.login.identity.provider=
 nifi.security.ocsp.responder.url=
 nifi.security.ocsp.responder.certificate=
@@ -176,7 +176,7 @@ nifi.security.truststore=
 nifi.security.truststoreType=
 nifi.security.truststorePasswd=
 nifi.security.needClientAuth=
-nifi.security.user.authorizer=managed-authorizer
+nifi.security.user.authorizer={%- if nifi.ranger_auth -%}ranger-provider{%- else -%}managed-authorizer{%- endif %}
 nifi.security.user.login.identity.provider=
 nifi.security.ocsp.responder.url=
 nifi.security.ocsp.responder.certificate=
