INFRAOP-5886: nifi settings

--- a/hadoop/conf/nifi/nifi.properties
+++ b/hadoop/conf/nifi/nifi.properties
@@ -252,7 +252,7 @@ nifi.zookeeper.kerberos.removeHostFromPrincipal=
 nifi.zookeeper.kerberos.removeRealmFromPrincipal=
 
 # kerberos #
-nifi.kerberos.krb5.file=
+nifi.kerberos.krb5.file={% if hadoop.secure_mode %}/etc/krb5.conf{% else %}{% endif %}
 
 # kerberos service principal #
 nifi.kerberos.service.principal={%- if hadoop.secure_mode -%}nifi/{{grains['fqdn']}}@{{ grains['cluster_id'] | upper }}{%- else -%}{%- endif %}
