INFRAOP-5886: nifi config

--- a/hadoop/conf/nifi/nifi.properties
+++ b/hadoop/conf/nifi/nifi.properties
@@ -55,12 +55,12 @@ nifi.state.management.embedded.zookeeper.properties=./conf/zookeeper.properties
 
 
 # H2 Settings
-nifi.database.directory=./database_repository
+nifi.database.directory={{ nifi.data_dir}}/database_repository
 nifi.h2.url.append=;LOCK_TIMEOUT=25000;WRITE_DELAY=0;AUTO_SERVER=FALSE
 
 # FlowFile Repository
 nifi.flowfile.repository.implementation=org.apache.nifi.controller.repository.WriteAheadFlowFileRepository
-nifi.flowfile.repository.directory=./flowfile_repository
+nifi.flowfile.repository.directory={{ nifi.data_dir}}/flowfile_repository
 nifi.flowfile.repository.partitions=256
 nifi.flowfile.repository.checkpoint.interval=2 mins
 nifi.flowfile.repository.always.sync=false
@@ -76,7 +76,7 @@ nifi.swap.out.threads=4
 nifi.content.repository.implementation=org.apache.nifi.controller.repository.FileSystemRepository
 nifi.content.claim.max.appendable.size=1 MB
 nifi.content.claim.max.flow.files=100
-nifi.content.repository.directory.default=./content_repository
+nifi.content.repository.directory.default={{ nifi.data_dir }}/content_repository
 nifi.content.repository.archive.max.retention.period=12 hours
 nifi.content.repository.archive.max.usage.percentage=50%
 nifi.content.repository.archive.enabled=true
@@ -92,7 +92,7 @@ nifi.provenance.repository.encryption.key.id=
 nifi.provenance.repository.encryption.key=
 
 # Persistent Provenance Repository Properties
-nifi.provenance.repository.directory.default=./provenance_repository
+nifi.provenance.repository.directory.default={{ nifi.data_dir}}/provenance_repository
 nifi.provenance.repository.max.storage.time=24 hours
 nifi.provenance.repository.max.storage.size=1 GB
 nifi.provenance.repository.rollover.time=30 secs
