INFRAOP-5934: enable ssl for ranger usersync

--- a/hadoop/conf/ranger/usersync.install.properties
+++ b/hadoop/conf/ranger/usersync.install.properties
@@ -77,11 +77,11 @@ hadoop_conf=/etc/hadoop/conf
 CRED_KEYSTORE_FILENAME=/etc/ranger/usersync/conf/rangerusersync.jceks
 
 # SSL Authentication
-AUTH_SSL_ENABLED=false
+AUTH_SSL_ENABLED={% if hadoop.secure_mode %}true{% else %}false{% endif %}
 AUTH_SSL_KEYSTORE_FILE=/etc/ranger/usersync/conf/cert/unixauthservice.jks
 AUTH_SSL_KEYSTORE_PASSWORD={{ ranger.ranger_pass }}
-AUTH_SSL_TRUSTSTORE_FILE=
-AUTH_SSL_TRUSTSTORE_PASSWORD=
+AUTH_SSL_TRUSTSTORE_FILE=/usr/lib/java/jre/lib/security/cacerts
+AUTH_SSL_TRUSTSTORE_PASSWORD=changeit
 
 # ---------------------------------------------------------------
 # The following properties are relevant only if SYNC_SOURCE = ldap
