INFRAOP-5934: eliminate hardcoded values

--- a/hadoop/conf/livy/livy.conf
+++ b/hadoop/conf/livy/livy.conf
@@ -21,10 +21,10 @@
 
 {% if hadoop.secure_mode %}
 livy.server.auth.kerberos.keytab = /etc/krb5/spnego.livy.keytab
-livy.server.auth.kerberos.principal = HTTP/_HOST@HADOOP-PRE-C3
+livy.server.auth.kerberos.principal = HTTP/_HOST@{{ grains['cluster_id'] | upper }}
 livy.server.auth.type = kerberos
 livy.server.launch.kerberos.keytab = /etc/krb5/livy.keytab
-livy.server.launch.kerberos.principal = livy/_HOST@HADOOP-PRE-C3
+livy.server.launch.kerberos.principal = livy/_HOST@{{ grains['cluster_id'] | upper }}
 livy.keystore = /home/{{username}}/.keystore
 livy.keystore.password = {{ keystore_pass }}
 livy.key-password = {{ keystore_pass }}
