--- a/hadoop/conf/nifi/nifi.properties
+++ b/hadoop/conf/nifi/nifi.properties
@@ -2,6 +2,10 @@
 {% from 'hadoop/knox/settings.sls' import knox with context %}
 {% from 'hadoop/settings.sls' import hadoop with context %}
 {%- from 'zookeeper/settings.sls' import zk with context %}
+{%- set knox_target = 'G@role:knox and G@clustername:' + grains['cluster_id'] -%}
+{%- set knox_grains = salt['mine.get'](knox_target, 'grains.item', tgt_type='compound') -%}
+{%- if knox_grains.items()|length > 0 %}{%- set knox_host_fqdn = (knox_grains.items() | first)['fqdn'] %}{%- else -%}{%- set knox_host_fqdn = '' %}{% endif %}
+{% set knox_url = salt['pillar.get']('knox:config:gateway-site:gateway.frontend.url:value', knox_host_fqdn) %}
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
 # this work for additional information regarding copyright ownership.
@@ -30,6 +34,8 @@ nifi.flowservice.writedelay.interval=500 ms
 nifi.administrative.yield.duration=30 sec
 # If a component has no work to do (is "bored"), how long should we wait before checking again for work?
 nifi.bored.yield.duration=10 millis
+nifi.queue.backpressure.count=10000
+nifi.queue.backpressure.size=1 GB
 
 nifi.authorizer.configuration.file=./conf/authorizers.xml
 nifi.login.identity.provider.configuration.file=./conf/login-identity-providers.xml
@@ -60,6 +66,7 @@ nifi.h2.url.append=;LOCK_TIMEOUT=25000;WRITE_DELAY=0;AUTO_SERVER=FALSE
 
 # FlowFile Repository
 nifi.flowfile.repository.implementation=org.apache.nifi.controller.repository.WriteAheadFlowFileRepository
+nifi.flowfile.repository.wal.implementation=org.apache.nifi.wali.SequentialAccessWriteAheadLog
 nifi.flowfile.repository.directory={{ nifi.data_dir}}/flowfile_repository
 nifi.flowfile.repository.partitions=256
 nifi.flowfile.repository.checkpoint.interval=2 mins
@@ -113,6 +120,8 @@ nifi.provenance.repository.index.shard.size=500 MB
 # Indicates the maximum length that a FlowFile attribute can be when retrieving a Provenance Event from
 # the repository. If the length of any attribute exceeds this value, it will be truncated when the event is retrieved.
 nifi.provenance.repository.max.attribute.length=65536
+nifi.provenance.repository.concurrent.merge.threads=2
+nifi.provenance.repository.warm.cache.frequency=1 hour
 
 # Volatile Provenance Respository Properties
 nifi.provenance.repository.buffer.size=100000
@@ -128,6 +137,7 @@ nifi.remote.input.secure={%- if hadoop.secure_mode -%}true{%- else -%}false{%- e
 nifi.remote.input.socket.port=
 nifi.remote.input.http.enabled=true
 nifi.remote.input.http.transaction.ttl=30 sec
+nifi.remote.contents.cache.expiration=30 secs
 
 # web properties #
 nifi.web.war.directory=./lib
@@ -146,6 +156,9 @@ nifi.web.http.network.interface.default=
 nifi.web.https.network.interface.default=
 nifi.web.jetty.working.directory=./work/jetty
 nifi.web.jetty.threads=200
+nifi.web.max.header.size=16 KB
+nifi.web.proxy.context.path={% if knox_url %}{{ knox_url }}:{{ knox.gateway_port}}{% endif %}
+nifi.web.proxy.host=
 
 # security properties #
 nifi.sensitive.props.key=
@@ -192,10 +205,6 @@ nifi.security.user.oidc.preferred.jwsalgorithm=
 
 # Apache Knox SSO Properties #
 {%- if nifi.knoxsso %}
-{%- set knox_target = 'G@role:knox and G@clustername:' + grains['cluster_id'] -%}
-{%- set knox_grains = salt['mine.get'](knox_target, 'grains.item', tgt_type='compound') -%}
-{%- if knox_grains.items()|length > 0 %}{%- set knox_host_fqdn = (knox_grains.items() | first)['fqdn'] %}{%- else -%}{%- set knox_host_fqdn = '' %}{% endif %}
-{% set knox_url = salt['pillar.get']('knox:config:gateway-site:gateway.frontend.url:value', knox_host_fqdn) %}
 nifi.security.user.knox.url=https://{{ knox_url }}:{{ knox.gateway_port}}/{{ knox.gateway_path }}/knoxsso/api/v1/websso
 nifi.security.user.knox.publicKey=/etc/ssl/certs/wildcard.jamba.net
 nifi.security.user.knox.audiences={{ nifi.knox_audience }}
@@ -214,8 +223,18 @@ nifi.security.user.knox.cookieName=hadoop-jwt
 #
 # nifi.security.identity.mapping.pattern.dn=^CN=(.*?), OU=(.*?), O=(.*?), L=(.*?), ST=(.*?), C=(.*?)$
 # nifi.security.identity.mapping.value.dn=$1@$2
+# nifi.security.identity.mapping.transform.dn=NONE
 # nifi.security.identity.mapping.pattern.kerb=^(.*?)/instance@(.*?)$
 # nifi.security.identity.mapping.value.kerb=$1@$2
+# nifi.security.identity.mapping.transform.kerb=UPPER
+
+# Group Mapping Properties #
+# These properties allow normalizing group names coming from external sources like LDAP. The following example
+# lowercases any group name.
+#
+# nifi.security.group.mapping.pattern.anygroup=^(.*)$
+# nifi.security.group.mapping.value.anygroup=$1
+# nifi.security.group.mapping.transform.anygroup=LOWER
 
 # cluster common properties (all nodes must have same values) #
 nifi.cluster.protocol.heartbeat.interval=5 sec
