INFRAOP-5950: adjust env params for hadoop 3, adjust default ports

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -11,15 +11,6 @@
 {%- set solr_grains = salt['mine.get'](solr_target, 'grains.item', tgt_type='compound') -%}
 {%- set livy_target = 'G@role:livy and G@clustername:' + grains['cluster_id'] -%}
 {%- set livy_grains = salt['mine.get'](livy_target, 'grains.item', tgt_type='compound') -%}
-{%- if hadoop.secure_mode -%}
-	{%- set protocol = 'https' -%}
-	{%- set hdfs_port = 50470 %}
-	{%- set yarn_port = 8090 %}
-{%- else -%}
-	{%- set protocol = 'http' -%}
-	{%- set hdfs_port = 50070 %}
-	{%- set yarn_port = 8088 %}
-{%- endif -%}
 # Hue configuration file
 # ===================================
 #
@@ -1059,10 +1050,10 @@
       # NameNode logical name.
       logical_name=nn1
       {%- if hdfs.namenode_count > 1 %}
-      webhdfs_url={{ protocol}}://{{ hdfs.namenode_hosts | first() }}:{{ hdfs_port}}/webhdfs/v1
+      webhdfs_url={{ hdfs.namenode_http_protocol}}://{{ hdfs.namenode_hosts | first() }}:{{ hdfs.namenode_http_port}}/webhdfs/v1
       {%- endif %}
       {%- if hdfs.namenode_count == 1 %}
-      webhdfs_url={{ protocol}}://{{ hdfs.namenode }}:{{ hdfs_port}}/webhdfs/v1
+      webhdfs_url={{ hdfs.namenode_http_protocol}}://{{ hdfs.namenode }}:{{ hdfs.namenode_http_port }}/webhdfs/v1
       {%- endif %}
 
       # Change this if your HDFS cluster is Kerberos-secured
@@ -1089,7 +1080,7 @@
       {%- if hadoop.secure_mode %}
       security_enabled=True{%- else %}
       security_enabled=False{%- endif %}
-      resourcemanager_api_url={{protocol}}://{{ rm}}:{{ yarn_port}}
+      resourcemanager_api_url={{ yarn.resourcemanager_webapp_protocol }}://{{ rm}}:{{ yarn.resourcemanager_webapp_protocol }}
       history_server_api_url=http://{{ rm }}:19888
       ## spark_history_server_url=http://localhost:18088
       ssl_cert_ca_verify=True
