INFRAOP-5950: major upgrade syntax fix

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -1235,12 +1235,13 @@
 
 [spark]
   {%- if livy_grains.items()| length > 0 %}
-  livy_server_url={{ protocol }}://{{livy_grains.keys() | first() }}:8998
   livy_server_session_kind=yarn
   {%- if hadoop.secure_mode %}
+  livy_server_url=https://{{livy_grains.keys() | first() }}:8998
   security_enabled=true
   ssl_cert_ca_verify=true
   {%- else %}
+  livy_server_url=http://{{livy_grains.keys() | first() }}:8998
   security_enabled=false
   ssl_cert_ca_verify=false
   {%- endif %}
