--- a/hadoop/conf/nifi/bootstrap-registry.conf
+++ b/hadoop/conf/nifi/bootstrap-registry.conf
@@ -1,4 +1,4 @@
-#
+{%- from 'hadoop/nifi/settings.sls' import nifi with context -%}
 # Licensed to the Apache Software Foundation (ASF) under one or more
 # contributor license agreements.  See the NOTICE file distributed with
 # this work for additional information regarding copyright ownership.
